--- a/block-templates/index.html
+++ b/block-templates/index.html
@@ -4,7 +4,7 @@
 <div class="wp-block-group"><div class="wp-block-group__inner-container">
 <!-- wp:query {"queryId":1,"query":{"perPage":10,"offset":0,"orderBy":"date"}} -->
 <!-- wp:query-loop -->
-<!-- wp:post-title {"isLink":true} /-->
+<!-- wp:post-title {"isLink":true,"linkTarget":"_self"} /-->
 
 <!-- wp:post-content /-->
 <!-- /wp:query-loop -->
