--- a/block-templates/single.html
+++ b/block-templates/single.html
@@ -1,6 +1,6 @@
 <!-- wp:template-part {"slug":"header","theme":"q"} /-->
 
-<!-- wp:post-title /-->
+<!-- wp:post-title {"level":1} /-->
 
 <!-- wp:post-content /-->
 
