Use site-title instead of site-logo

--- a/block-template-parts/header.html
+++ b/block-template-parts/header.html
@@ -1,5 +1,5 @@
 <!-- wp:group -->
-<div class="wp-block-group"><div class="wp-block-group__inner-container"><!-- wp:site-logo {"align":"center","width":200} /-->
+<div class="wp-block-group"><div class="wp-block-group__inner-container"><!-- wp:site-title {"textAlign":"center"} /-->
 
 <!-- wp:navigation {"itemsJustification":"center", "orientation":"horizontal"} -->
 <!-- wp:navigation-link {"label":"Home","url":"/"} /-->
