--- a/block-templates/index.html
+++ b/block-templates/index.html
@@ -1,15 +1,17 @@
 <!-- wp:template-part {"slug":"header","theme":"q"} /-->
 
-<!-- wp:group -->
-<div class="wp-block-group"><div class="wp-block-group__inner-container">
-<!-- wp:query {"queryId":1,"query":{"perPage":10,"offset":0,"orderBy":"date"}} -->
+<!-- wp:query {"queryId":1,"query":{"perPage":10,"pages":100,"offset":0,"categoryIds":[],"tagIds":[],"order":"desc","orderBy":"date","author":"","search":""}} -->
 <!-- wp:query-loop -->
-<!-- wp:post-title {"isLink":true,"linkTarget":"_self"} /-->
+<!-- wp:post-title {"isLink":true} /-->
 
-<!-- wp:post-content /-->
+<!-- wp:post-featured-image /-->
+
+<!-- wp:post-date /-->
+
+<!-- wp:post-excerpt /-->
 <!-- /wp:query-loop -->
 
 <!-- wp:query-pagination /-->
 <!-- /wp:query -->
-</div></div>
-<!-- /wp:group -->
+
+<!-- wp:template-part {"slug":"footer","theme":"q"} /-->
