--- a/block-templates/index.html
+++ b/block-templates/index.html
@@ -2,7 +2,7 @@
 
 <!-- wp:query {"queryId":1,"query":{"perPage":10,"pages":100,"offset":0,"categoryIds":[],"tagIds":[],"order":"desc","orderBy":"date","author":"","search":""}} -->
 <!-- wp:query-loop -->
-<!-- wp:post-title {"isLink":true} /-->
+<!-- wp:post-title {"isLink":true,"linkTarget":"_self"} /-->
 
 <!-- wp:post-featured-image /-->
 
