Revert "optimise readability in header.html + footer.html"
This reverts commit 7f30c74f7ea2c3fce8341e489ac82306bbc7c2c0.

--- a/block-template-parts/header.html
+++ b/block-template-parts/header.html
@@ -1,11 +1,11 @@
 <!-- wp:group -->
-<div class="wp-block-group">
-    <div class="wp-block-group__inner-container"><!-- wp:site-title {"textAlign":"center"} /-->
-        <!-- wp:navigation {"itemsJustification":"center", "orientation":"horizontal"} -->
-            <!-- wp:navigation-link {"label":"Home","url":"/"} /-->
-            <!-- wp:navigation-link {"label":"About","url":"/about"} /-->
-            <!-- wp:navigation-link {"label":"Blog","url":"/blog"} /-->
-        <!-- /wp:navigation -->
-    </div>
-</div>
+<div class="wp-block-group"><div class="wp-block-group__inner-container"><!-- wp:site-title {"textAlign":"center"} /-->
+
+<!-- wp:navigation {"itemsJustification":"center", "orientation":"horizontal"} -->
+<!-- wp:navigation-link {"label":"Home","url":"/"} /-->
+
+<!-- wp:navigation-link {"label":"About","url":"/about"} /-->
+
+<!-- wp:navigation-link {"label":"Blog","url":"/blog"} /-->
+<!-- /wp:navigation --></div></div>
 <!-- /wp:group -->
