--- a/block-templates/index.html
+++ b/block-templates/index.html
@@ -1,6 +1,6 @@
 <!-- wp:template-part {"slug":"header","theme":"q"} /-->
 
-<!-- wp:query {"queryId":1,"query":{"perPage":10,"pages":100,"offset":0,"categoryIds":[],"tagIds":[],"order":"desc","orderBy":"date","author":"","search":""}} -->
+<!-- wp:query {"queryId":1,"query":{"perPage":10,"pages":100,"offset":0,"postType":"post","categoryIds":[],"tagIds":[],"order":"desc","orderBy":"date","author":"","search":"","exclude":[]}} -->
 <!-- wp:query-loop -->
 <!-- wp:post-title {"isLink":true,"linkTarget":"_self"} /-->
 
