Make post-date smaller in size

--- a/block-templates/index.html
+++ b/block-templates/index.html
@@ -6,7 +6,7 @@
 
 <!-- wp:post-featured-image /-->
 
-<!-- wp:post-date /-->
+<!-- wp:post-date {"fontSize":"small"} /-->
 
 <!-- wp:post-excerpt /-->
 <!-- /wp:query-loop -->
