update index template

--- a/block-templates/index.html
+++ b/block-templates/index.html
@@ -1,8 +1,8 @@
 <!-- wp:template-part {"slug":"header","theme":"q"} /-->
 
-<!-- wp:query {"queryId":1,"query":{"pages":100,"offset":0,"postType":"post","categoryIds":[],"tagIds":[],"order":"desc","orderBy":"date","author":"","search":"","exclude":[]}} -->
+<!-- wp:query {"queryId":1,"query":{"pages":100,"offset":0,"postType":"post","categoryIds":[],"tagIds":[],"order":"desc","orderBy":"date","author":"","search":"","exclude":[],"perPage":10,"inherit":true}} -->
 <!-- wp:query-loop -->
-<!-- wp:post-title {"isLink":true,"linkTarget":"_self"} /-->
+<!-- wp:post-title {"isLink":true} /-->
 
 <!-- wp:post-featured-image /-->
 
