--- a/block-templates/index.html
+++ b/block-templates/index.html
@@ -1,12 +1,10 @@
 <!-- wp:template-part {"slug":"header","theme":"q"} /-->
 
-<!-- wp:query {"queryId":1,"query":{"pages":100,"offset":0,"postType":"post","categoryIds":[],"tagIds":[],"order":"desc","orderBy":"date","author":"","search":"","exclude":[],"perPage":10,"inherit":true}} -->
+<!-- wp:query {"queryId":0,"query":{"perPage":10,"pages":100,"offset":0,"postType":"post","categoryIds":[],"tagIds":[],"order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":true}} -->
 <!-- wp:query-loop -->
 <!-- wp:post-title {"isLink":true} /-->
 
-<!-- wp:post-featured-image /-->
-
-<!-- wp:post-date {"fontSize":"small"} /-->
+<!-- wp:post-featured-image {"isLink":true} /-->
 
 <!-- wp:post-excerpt /-->
 <!-- /wp:query-loop -->
