--- a/block-templates/index.html
+++ b/block-templates/index.html
@@ -6,10 +6,12 @@
 
 <!-- wp:post-featured-image {"isLink":true} /-->
 
+<!-- wp:post-date {"fontSize":"small"} /-->
+
 <!-- wp:post-excerpt /-->
 <!-- /wp:query-loop -->
+<!-- /wp:query -->
 
 <!-- wp:query-pagination /-->
-<!-- /wp:query -->
 
 <!-- wp:template-part {"slug":"footer","theme":"q"} /-->
