theme reference no longer needed

--- a/block-templates/index.html
+++ b/block-templates/index.html
@@ -1,4 +1,4 @@
-<!-- wp:template-part {"slug":"header","theme":"q"} /-->
+<!-- wp:template-part {"slug":"header"} /-->
 
 <!-- wp:query {"queryId":0,"query":{"perPage":10,"pages":100,"offset":0,"postType":"post","categoryIds":[],"tagIds":[],"order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":true}} -->
 <!-- wp:query-loop -->
@@ -14,4 +14,4 @@
 
 <!-- wp:query-pagination /-->
 
-<!-- wp:template-part {"slug":"footer","theme":"q"} /-->
+<!-- wp:template-part {"slug":"footer"} /-->
