--- a/block-templates/single.html
+++ b/block-templates/single.html
@@ -1,4 +1,4 @@
-<!-- wp:template-part {"slug":"header","theme":"q"} /-->
+<!-- wp:template-part {"slug":"header"} /-->
 
 <!-- wp:post-title {"level":1} /-->
 
@@ -12,4 +12,4 @@
 
 <!-- wp:post-comments-form /-->
 
-<!-- wp:template-part {"slug":"footer","theme":"q"} /-->
+<!-- wp:template-part {"slug":"footer"} /-->
