Implement layout from config
See https://github.com/WordPress/gutenberg/pull/29335

--- a/block-templates/404.html
+++ b/block-templates/404.html
@@ -1,3 +1,8 @@
+<!-- wp:template-part {"slug":"header"} /-->
+
+<!-- wp:group {"tagName":"main","layout":{"inherit":true}} -->
+<div class="wp-block-group"><div class="wp-block-group__inner-container">
+
 <!-- wp:heading {"level":1,"fontSize":"enormous"} -->
 <h1>404</h1>
 <!-- /wp:heading -->
@@ -7,3 +12,6 @@
 <!-- /wp:paragraph -->
 
 <!-- wp:search {"label":"Search","buttonText":"Search"} /-->
+
+</div>
+<!-- /wp:group -->
