--- a/block-templates/single.html
+++ b/block-templates/single.html
@@ -1,5 +1,7 @@
 <!-- wp:template-part {"slug":"header"} /-->
 
+<!-- wp:group {"tagName":"main","layout":{"inherit":true}} -->
+<div class="wp-block-group"><div class="wp-block-group__inner-container">
 <!-- wp:post-title {"level":1} /-->
 
 <!-- wp:post-featured-image /-->
@@ -11,5 +13,7 @@
 <!-- wp:post-comments /-->
 
 <!-- wp:post-comments-form /-->
+</div>
+<!-- /wp:group -->
 
 <!-- wp:template-part {"slug":"footer"} /-->
