--- a/block-template-parts/header.html
+++ b/block-template-parts/header.html
@@ -1,6 +1,5 @@
-<!-- wp:group -->
-<div class="wp-block-group"><div class="wp-block-group__inner-container"><!-- wp:site-title {"textAlign":"center"} /-->
+<!-- wp:group {"layout":{"inherit":true}} -->
+<div class="wp-block-group"><!-- wp:site-title {"textAlign":"center"} /-->
 
-<!-- wp:navigation {"itemsJustification":"center", "orientation":"horizontal"} -->
-<!-- /wp:navigation --></div></div>
+<!-- wp:navigation {"orientation":"horizontal","itemsJustification":"center"} /--></div>
 <!-- /wp:group -->
