--- a/block-template-parts/footer.html
+++ b/block-template-parts/footer.html
@@ -2,8 +2,8 @@
 <div style="height:150px" aria-hidden="true" class="wp-block-spacer"></div>
 <!-- /wp:spacer -->
 
-<!-- wp:group {"align":"full","backgroundColor":"dark","textColor":"light","style":{"color":{"link":"var:preset|color|light"}}} -->
-<div class="wp-block-group alignfull has-light-color has-dark-background-color has-text-color has-background has-link-color" style="--wp--style--color--link:#f5f5f9"><div class="wp-block-group__inner-container"><!-- wp:paragraph {"align":"center"} -->
+<!-- wp:group {"align":"full","style":{"color":{"link":"var:preset|color|white"}},"backgroundColor":"black","textColor":"white","layout":{"inherit":false}} -->
+<div class="wp-block-group alignfull has-white-color has-black-background-color has-text-color has-background has-link-color" style="--wp--style--color--link:var(--wp--preset--color--white)"><!-- wp:paragraph {"align":"center"} -->
 <p class="has-text-align-center">Site proudly powered by <a href="https://wordpress.org" target="_blank" rel="noreferrer noopener">WordPress</a>, using the <a href="https://github.com/aristath/q" target="_blank" rel="noreferrer noopener">Q theme</a>.</p>
-<!-- /wp:paragraph --></div></div>
+<!-- /wp:paragraph --></div>
 <!-- /wp:group -->
