--- a/block-templates/single.html
+++ b/block-templates/single.html
@@ -1,19 +1,17 @@
-<!-- wp:template-part {"slug":"header"} /-->
+<!-- wp:template-part {"slug":"header","layout":{"inherit":false}} /-->
 
 <!-- wp:group {"tagName":"main","layout":{"inherit":true}} -->
-<div class="wp-block-group"><div class="wp-block-group__inner-container">
-<!-- wp:post-title {"level":1} /-->
+<main class="wp-block-group"><!-- wp:post-title {"level":1} /-->
 
 <!-- wp:post-featured-image /-->
 
-<!-- wp:post-date /-->
+<!-- wp:post-date {"fontSize":"small"} /-->
 
 <!-- wp:post-content /-->
 
 <!-- wp:post-comments /-->
 
-<!-- wp:post-comments-form /-->
-</div>
+<!-- wp:post-comments-form /--></main>
 <!-- /wp:group -->
 
-<!-- wp:template-part {"slug":"footer"} /-->
+<!-- wp:template-part {"slug":"footer","tagName":""} /-->
