--- a/block-template-parts/header.html
+++ b/block-template-parts/header.html
@@ -1,5 +1,5 @@
-<!-- wp:group {"layout":{"inherit":true}} -->
-<div class="wp-block-group"><!-- wp:site-title {"textAlign":"center"} /-->
+<!-- wp:group {"style":{"spacing":{"padding":{"top":"1em","right":"1em","bottom":"1em","left":"1em"}}},"layout":{"inherit":true}} -->
+<div class="wp-block-group" style="padding-top:1em;padding-right:1em;padding-bottom:1em;padding-left:1em"><!-- wp:site-title {"textAlign":"center"} /-->
 
 <!-- wp:navigation {"orientation":"horizontal","itemsJustification":"center"} /--></div>
 <!-- /wp:group -->
