--- a/block-templates/index.html
+++ b/block-templates/index.html
@@ -1,8 +1,8 @@
 <!-- wp:template-part {"slug":"header","tagName":"header"} /-->
 
 <!-- wp:group {"style":{"spacing":{"padding":{"top":"1em","right":"1em","bottom":"1em","left":"1em"}}},"layout":{"inherit":true}} -->
-<div class="wp-block-group" style="padding-top:1em;padding-right:1em;padding-bottom:1em;padding-left:1em"><!-- wp:query {"queryId":0,"query":{"perPage":10,"pages":0,"offset":0,"postType":"post","categoryIds":[],"tagIds":[],"order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":true}} -->
-<!-- wp:query-loop -->
+<div class="wp-block-group" style="padding-top:1em;padding-right:1em;padding-bottom:1em;padding-left:1em"><!-- wp:query {"queryId":0,"query":{"perPage":10,"pages":0,"offset":0,"postType":"post","categoryIds":[],"tagIds":[],"order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":true},"layout":{"inherit":true}} -->
+<div class="wp-block-query"><!-- wp:post-template -->
 <!-- wp:post-title {"isLink":true} /-->
 
 <!-- wp:post-featured-image {"isLink":true} /-->
@@ -10,7 +10,7 @@
 <!-- wp:post-date {"fontSize":"small"} /-->
 
 <!-- wp:post-excerpt /-->
-<!-- /wp:query-loop -->
+<!-- /wp:post-template -->
 
 <!-- wp:query-pagination -->
 <div class="wp-block-query-pagination"><!-- wp:query-pagination-previous {"label":""} /-->
@@ -18,7 +18,7 @@
 <!-- wp:query-pagination-numbers /-->
 
 <!-- wp:query-pagination-next /--></div>
-<!-- /wp:query-pagination -->
+<!-- /wp:query-pagination --></div>
 <!-- /wp:query --></div>
 <!-- /wp:group -->
 
