--- a/parts/footer.html
+++ b/parts/footer.html
@@ -1,9 +1,9 @@
-<!-- wp:spacer {"height":150} -->
+<!-- wp:spacer {"height":"150px"} -->
 <div style="height:150px" aria-hidden="true" class="wp-block-spacer"></div>
 <!-- /wp:spacer -->
 
-<!-- wp:group {"align":"full","style":{"color":{"link":"var:preset|color|white"},"spacing":{"padding":{"top":"1em","right":"1em","bottom":"1em","left":"1em"}}},"backgroundColor":"black","textColor":"white","layout":{"inherit":false}} -->
-<div class="wp-block-group alignfull has-white-color has-black-background-color has-text-color has-background has-link-color" style="--wp--style--color--link:var(--wp--preset--color--white);padding-top:1em;padding-right:1em;padding-bottom:1em;padding-left:1em"><!-- wp:paragraph {"align":"center"} -->
+<!-- wp:group {"align":"full","style":{"color":{"link":"var:preset|color|white"},"spacing":{"padding":{"top":"1em","right":"1em","bottom":"1em","left":"1em"}}},"backgroundColor":"black","textColor":"white","className":"has-link-color","layout":{"inherit":false}} -->
+<div class="wp-block-group alignfull has-link-color has-white-color has-black-background-color has-text-color has-background" style="padding-top:1em;padding-right:1em;padding-bottom:1em;padding-left:1em"><!-- wp:paragraph {"align":"center"} -->
 <p class="has-text-align-center">Site proudly powered by <a href="https://wordpress.org" target="_blank" rel="noreferrer noopener">WordPress</a>, using the <a href="https://github.com/aristath/q" target="_blank" rel="noreferrer noopener">Q theme</a>.</p>
 <!-- /wp:paragraph --></div>
 <!-- /wp:group -->
